[A] - added aside to topic
moved apng from index to topic

--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -52,6 +52,10 @@
 					The only way for a software to correctly distinguish between PNG and APNG is by reading the ancillary chunks which aren’t required to use PNGs, so if a software didn’t know about APNGs, the first frame would show up as a typical PNG.
 					So with the maintainers of the file format against the idea of this implementation and the data of the animation hidden inside ancillary chunks that decoders used in applications could skip, APNG never grew in popularity. 
 				</p>
+				<aside>
+					<p id="scribble">This is an APNG! -></p>
+					<img src = "styles/images/bouncy.png" alt = "HTML Tutorial" />
+				</aside>
 			</section>
 			<section class="parallax parallax-bg">
 				<h2>Features/How does it work?</h2>
