[A] - added actual question to quiz.html
styled input fields

--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -64,11 +64,11 @@
 				<section class="bubble" id="bubble1">
 					<fieldset class="grow">
 						<div class="question">
-							<legend>Question 1</legend>
+							<legend>Question 1: Support for what sets APNG apart from GIF?</legend>
 							<div class="content">
 								<div>
-									<label for="question1">First option</label>
-									<input type="text" id="question1" name="answer1" placeholder="Your answer..." pattern="[a-z A-Z]{2,50}">
+									<label for="question1">Answer:</label>
+									<input type="text" id="question1" name="support_for" placeholder="Your answer..." pattern="[a-z A-Z]{2,50}">
 								</div>
 							</div>
 						</div>
@@ -79,23 +79,23 @@
 				<section class="bubble" id="bubble2">
 					<fieldset class="grow">
 						<div class="question">
-							<legend>Question 2</legend>
+							<legend>Question 2: When was APNG first developed?</legend>
 							<div class="content">
 								<div class="multiple-choice">
-									<input type="radio" id="first_choice" name="question2" value="Answer1">
-									<label for="first_choice">First option</label>
+									<input type="radio" id="first_choice" name="year_developed" value="2002">
+									<label for="first_choice">2002</label>
 								</div>
 								<div class="multiple-choice">
-									<input type="radio" id="second_choice" name="question2" value="Answer2">
-									<label for="second_choice">Second option</label>
+									<input type="radio" id="second_choice" name="year_developed" value="2003">
+									<label for="second_choice">2003</label>
 								</div>
 								<div class="multiple-choice">
-									<input type="radio" id="third_choice" name="question2" value="Answer3">
-									<label for="third_choice">Third option</label>
+									<input type="radio" id="third_choice" name="year_developed" value="2004">
+									<label for="third_choice">2004</label>
 								</div>
 								<div class="multiple-choice">
-									<input type="radio" id="fourth_choice" name="question2" value="Answer4">
-									<label for="fourth_choice">Fourth option</label>
+									<input type="radio" id="fourth_choice" name="year_developed" value="2005">
+									<label for="fourth_choice">2005</label>
 								</div>
 							</div>
 						</div>
@@ -106,23 +106,23 @@
 				<section class="bubble" id="bubble3">
 					<fieldset class="grow">
 						<div class="question">
-							<legend>Question 3</legend>
+							<legend>Question 3: Tick all browsers whose current version supports APNG?</legend>
 							<div class="content">
 								<div class="multiple-choice">
-									<input type="checkbox" id="first_option" name="question3[]" value="Answer1">
-									<label for="first_option">First option</label>
+									<input type="checkbox" id="first_option" name="browser_support[]" value="Chrome">
+									<label for="first_option">Chrome</label>
 								</div>
 								<div class="multiple-choice">
-									<input type="checkbox" id="second_option" name="question3[]" value="Answer2">
-									<label for="second_option">Second option</label>
+									<input type="checkbox" id="second_option" name="browser_support[]" value="Edge">
+									<label for="second_option">Edge</label>
 								</div>
 								<div class="multiple-choice">
-									<input type="checkbox" id="third_option" name="question3[]" value="Answer3">
-									<label for="third_option">Third option</label>
+									<input type="checkbox" id="third_option" name="browser_support[]" value="Opera">
+									<label for="third_option">Opera</label>
 								</div>
 								<div class="multiple-choice">
-									<input type="checkbox" id="fourth_option" name="question3[]" value="Answer4">
-									<label for="fourth_option">Fourth option</label>
+									<input type="checkbox" id="fourth_option" name="browser_support[]" value="Internet Explorer">
+									<label for="fourth_option">Internet Explorer</label>
 								</div>
 							</div>
 						</div>
@@ -133,15 +133,15 @@
 				<section  class="bubble" id="bubble4">
 					<fieldset class="grow">
 						<div class="question">
-							<legend>Question 4</legend>
+							<legend>Question 4: Who developed APNG?</legend>
 							<div class="content">
 								<div>
-									<label for="question4">Question:</label>
-									<select id="question4" name="choice">
-										<option value="first_option">First option</option>
-										<option value="second_option">Second option</option>
-										<option value="third_option">Third option</option>
-										<option value="fourth_option">Fourth option</option>
+									<label for="question4">Answer:</label>
+									<select id="question4" name="developer">
+										<option value="Microsoft">Microsoft</option>
+										<option value="Google">Google</option>
+										<option value="Apple">Apple</option>
+										<option value="Mozilla">Mozilla</option>
 									</select>
 								</div>
 							</div>
@@ -153,10 +153,10 @@
 				<section class="bubble" id="bubble5">
 					<fieldset class="grow">
 						<div class="question">
-							<legend>Question 5</legend>
+							<legend>Question 5: What is APNG's full name?</legend>
 							<div class="content">
-								<label for="textarea">Question</label>
-								<textarea id="textarea" name="answer5" rows="10" cols="40" pattern="[a-z A-Z]{2,200}">Write your answer...</textarea>
+								<label for="textarea">Answer: </label>
+								<textarea id="textarea" name="long_name" rows="10" cols="40" pattern="[a-z A-Z]{2,200}" >Write your answer...</textarea>
 							</div>
 						</div>
 					</fieldset>
