--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -125,7 +125,7 @@
 				<h2>Critical Chunks</h2>
 			</section>
 			<section class="no-parallax">
-				<p>Critical Chunks are parts of data that must be present in the datastream for a successful decode of a PNG/APNG image and they must appear in this order:</p>					.</p>
+				<p>Critical Chunks are parts of data that must be present in the datastream for a successful decode of a PNG/APNG image and they must appear in this order:</p>
 				<ol>
 					<li>1 PNG Signature</li>
 					<li>1 IHDR chunk</li>
@@ -224,7 +224,7 @@
 
 
 
-
+			<!-- Last section -->
 
 
 
