--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -118,7 +118,7 @@
 			<section class="no-parallax">
 				<h3>File structure</h3>
 				<p>Since the APNG is an extension on the PNG file format, the base structure of the file/datastream is the same.</p>
-				<img src="styles/images/lattice_diagram.png" alt="Lattice diagram PNG image PLTE in datastream"/>
+				<img src="styles/images/gif-apng-1.gif" alt="Lattice diagram PNG image PLTE in datastream"/>
 				<p>The above image shows the file strucutre of a PNG file PLTE in datastream</p>
 			</section>
 			<section class="parallax parallax-bg">
