--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -71,8 +71,8 @@
 			<section class="no-parallax">
 				<table>
 					<tr>
-						<th>browsers</th>
-						<th>versions</th>
+						<th>Browsers</th>
+						<th>Versions</th>
 					</tr>
 					<tr>
 						<td>Google Chrome</td>
