[F] - fixed bugs on topic.html

--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -53,8 +53,8 @@
 					So with the maintainers of the file format against the idea of this implementation and the data of the animation hidden inside ancillary chunks that decoders used in applications could skip, APNG never grew in popularity. 
 				</p>
 				<aside>
-					<p id="scribble">This is an APNG! -></p>
-					<img src = "styles/images/bouncy.png" alt = "HTML Tutorial" />
+					<p id="scribble">Fun fact: APNG almost had a half-sibling called MNG (Mozilla Network Graphic), but it was abandoned as nobody bothered to support it.</p>
+					<img src = "styles/images/bouncy.png" alt = "HTML Tutorial" id="aside-img"/>
 				</aside>
 			</section>
 			
