[T] - topic page update

--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -68,7 +68,7 @@
 			</section>
 			<section class="no-parallax">
 				<p>
-				
+					When an application does not have APNG support, it is treated as a PNG and only the first frame is displayed.
 				</p>
 				<table>
 					<tr>
