--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -31,9 +31,7 @@
 					<li><a href="topic.html" target="_blank">Topic</a></li>
 					<li><a href="index.html" target="_blank">Home</a></li>
 					<li>
-						<a href="https://www.youtube.com/watch?v=iik25wqIuFo" target="__blank"
-							><img src="styles/images/youtube.png " width="28" height="28"
-						/></a>
+						<a href="https://www.youtube.com/watch?v=iik25wqIuFo" target="__blank" title="Youtube Link"><img alt="Link to youtube" src="styles/images/youtube.png "/></a>
 					</li>
 				</ul>
 			</nav>
