--- a/assign1/index.html
+++ b/assign1/index.html
@@ -23,7 +23,7 @@
                     <li><a href="quiz.html" target="_blank">Quiz</a></li>
                     <li><a href="topic.html" target="_blank">Topic</a></li>
                     <li><a href="index.html" target="_blank">Home</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=iik25wqIuFo" target="__blank"><img alt="youtube button" class="youtube" src="styles/images/youtube.png "/></a></li>
+                    <li><a href="https://www.youtube.com/watch?v=iik25wqIuFo"><img alt="youtube button" class="youtube" src="styles/images/youtube.png "/></a></li>
 				</ul>
 			</nav>
 		</header>
