--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -30,11 +30,7 @@
 					<li><a href="quiz.html" target="_blank">Quiz</a></li>
 					<li><a href="topic.html" target="_blank">Topic</a></li>
 					<li><a href="index.html" target="_blank">Home</a></li>
-					<li>
-						<a href="https://www.youtube.com/watch?v=iik25wqIuFo"
-							><img alt="youtube button" class="youtube" src="styles/images/youtube.png "
-						/></a>
-					</li>
+					<li><a href="https://www.youtube.com/watch?v=iik25wqIuFo"><img alt="youtube button" class="youtube" src="styles/images/youtube.png "/></a></li>
 				</ul>
 			</nav>
 		</header>
@@ -95,6 +91,7 @@
 				<h2>Web Browser Support</h2>
 			</section>
 			<section class="no-parallax">
+				<h3>Support for APNG on currently active browsers</h3>
 				<p>
 					When an application does not have APNG support, it is treated as a PNG and only the first
 					frame is displayed.
@@ -295,6 +292,7 @@
 			</section>
 
 			<section class="no-parallax">
+				<h3>What does a broken APNG look like?</h3>
 				<p>
 					As frames can be displayed before the entire image has been read, errors may not be
 					detected until partway through the animation. In this case, decoders will drop all
@@ -302,7 +300,7 @@
 					datastream, the default image may not be shown, the image won't load and it could crash
 					your software.
 				</p>
-				<img src="styles/images/incorrect chunks.png" alt="incorrect chunks" />
+				<img src="styles/images/incorrect_chunks.png" alt="incorrect chunks" />
 				<p>A green rectangle indicates the APNG has loaded correctly</p>
 			</section>
 
@@ -481,6 +479,7 @@
 			</section>
 
 			<section class="no-parallax">
+				<h3>The verdict?</h3>
 				<p>
 					In the modern web, you really shouldn't be using GIFs anymore due to its huge file size
 					and subpar visual quality and colour choice compared to existing alternatives. Hopefully
@@ -520,6 +519,7 @@
 			</section>
 
 			<section class="no-parallax">
+				<h3>Wrapping things up</h3>
 				<p>
 					APNG came at a time when there were very limited alternatives and provided superior
 					quality and size to its competitors. It was well received by few boasting how much better
