--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -24,7 +24,7 @@
                     <li><a href="quiz.html" target="_blank">Quiz</a></li>
                     <li><a href="topic.html" target="_blank">Topic</a></li>
                     <li><a href="index.html" target="_blank">Home</a></li>
-					<li><a href="https://www.youtube.com/watch?v=iik25wqIuFo"><img alt="youtube button" class="youtube" src="styles/images/youtube.png "/></a></li>
+					<li><a href="https://www.youtube.com/watch?v=iik25wqIuFo"><img alt="youtube button" class="youtube" src="images/youtube.png "/></a></li>
 				</ul>
 			</nav>
 		</header>
@@ -59,11 +59,11 @@
 				</p>
 				<p class="citation">
 					W3schools. (2019). <span class="italic">CSS Animations.</span><br/>
-					<span class="indent"></span>https://www.w3schools.com/css/css3_animations.asp
+					<span class="indent"></span><a href="https://www.w3schools.com/css/css3_animations.asp" target="_blank" rel="noreferrer noopener">https://www.w3schools.com/css/css3_animations.asp</a>
 				</p>
 				<p class="citation">
 					W3schools. (2019). <span class="italic">CSS Transitions.</span><br/>
-					<span class="indent"></span>https://www.w3schools.com/css/css3_transitions.asp
+					<span class="indent"></span><a href="https://www.w3schools.com/css/css3_transitions.asp" target="_blank" rel="noreferrer noopener">https://www.w3schools.com/css/css3_transitions.asp</a>
 				</p>
 			</section>
 			<section class="parallax parallax-bg">
@@ -74,16 +74,16 @@
 				<p>
 					The idea behind a parallax scrolling effect is to shift the elements on the Z-axis, to create several layers
 					and give the impression of depth. This can be achieved through the use of the transformation function
-					translateZ(-px) to "shift" the elements further away from the user, then apply another scale() to size it
-					appropriately according to the law of perspective.
+					translateZ(-1x) to "shift" the elements further away from the user, then apply another scale(1.5) to size it
+					back big enough to cover the width of the screen.
 				</p>
 				<h3>What are the steps to do it?</h3>
 				<ol>
-					<li>Give the parent container the {perspective: -px;} attribute. This is so that all children of that element
-						would be put in a 3D-simulated environment rather than the traditional plane of the viewport.</li>
+					<li>Give the parent container the {perspective: 1px;} attribute. This is so that all children of that element
+						would be placed in a 3D-simulated environment rather than the traditional 2D plane of the viewport.</li>
 					<li>Seperate the HTML into multiple segments, each within a &lt;section&gt; with either the class "parallax" or "no-parallax".
 						Give all of them the attribute {transform-style: preserve-3d;}</li>
-					<li>Apply to the pseudo selector ::after the attributes {position: absolute; top: 0; right: 0; left: 0; bottom: 0;}.
+					<li>Apply to the parallax elements the attributes {position: absolute; top: 0; right: 0; left: 0; bottom: 0;}.
 						Apply the transformation functions above as well. Finally, give it a different Z-index to separate it to a different
 						layer than the base.</li>
 					<li>If the elements scale up bigger than the viewport, scrollbars will appear by default. To prevent this, add the
@@ -92,7 +92,7 @@
 				<p class="citation">
 					Trigo, A. (2021, March 25). <span class="italic">How to create a parallax effect with CSS only.</span><br/>
 					<span class="indent"></span>Alvaro Trigo’s Blog - Web Developing and Design.<br/>
-					<span class="indent"></span>https://alvarotrigo.com/blog/how-to-create-a-parallax-effect-with-css-only/
+					<span class="indent"></span><a href="https://alvarotrigo.com/blog/how-to-create-a-parallax-effect-with-css-only/" target="_blank" rel="noreferrer noopener">https://alvarotrigo.com/blog/how-to-create-a-parallax-effect-with-css-only/</a>
 				</p>
 			</section>
 			<section class="parallax parallax-bg">
@@ -108,18 +108,18 @@
 				</p>
 				<p class="citation">
 					Morais, R. <span class="italic">Dark Mode without JavaScript.</span><br/>
-					<span class="indent"></span>https://codepen.io/rafaelsnts/pen/BEzZoX
+					<span class="indent"></span><a href="https://codepen.io/rafaelsnts/pen/BEzZoX" target="_blank" rel="noreferrer noopener">https://codepen.io/rafaelsnts/pen/BEzZoX</a>
 				</p>
 				<h3>But that's not all! Try toggling darkmode. Do the background images appear to be darker/lighter?</h3>
 				<p>
-					By applying the built-in function linear-gradient(), putting the opacity to 50% and passing the image in as a parameter, CSS automatically
-					generates a "shader" to cover over the image. Passing this entire function as a parameter to the color variable creates two corresponding
+					By applying the built-in function linear-gradient(), putting the opacity to 65% and passing the image in as a parameter, CSS automatically
+					generates a "shader" to cover over the image. Passing this entire function as a parameter to the background variable creates two corresponding
 					shaders to help aid in text visibility in both light and darkmode.
 				</p>
 				<p class="citation">
 					Trigo, A. (2021, March 25). <span class="italic">How to create a parallax effect with CSS only.</span><br/>
 					<span class="indent"></span>Alvaro Trigo’s Blog - Web Developing and Design.<br/>
-					<span class="indent"></span>https://alvarotrigo.com/blog/how-to-create-a-parallax-effect-with-css-only/
+					<span class="indent"></span><a href="https://alvarotrigo.com/blog/how-to-create-a-parallax-effect-with-css-only" target="_blank" rel="noreferrer noopener">https://alvarotrigo.com/blog/how-to-create-a-parallax-effect-with-css-only/</a>
 				</p>
 			</section>
 		</main>
