--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -30,7 +30,7 @@
 					<li><a href="quiz.html" target="_blank">Quiz</a></li>
 					<li><a href="topic.html" target="_blank">Topic</a></li>
 					<li><a href="index.html" target="_blank">Home</a></li>
-					<li><a href="https://www.youtube.com/watch?v=iik25wqIuFo"><img alt="youtube button" class="youtube" src="styles/images/youtube.png "/></a></li>
+					<li><a href="https://www.youtube.com/watch?v=iik25wqIuFo" target="_blank" rel="noreferrer noopener"><img alt="youtube button" class="youtube" src="images/youtube.png "/></a></li>
 				</ul>
 			</nav>
 		</header>
@@ -83,7 +83,7 @@
 						Fun fact: APNG almost had a half-sibling called MNG (Mozilla Network Graphic), but it
 						was abandoned as nobody bothered to support it.
 					</p>
-					<img src="styles/images/bouncy.png" alt="HTML Tutorial" id="aside-img" />
+					<img src="images/bouncy.png" alt="HTML Tutorial" id="aside-img" />
 				</aside>
 			</section>
 
@@ -149,7 +149,7 @@
 					Since the APNG is an extension on the PNG file format, the base structure of the
 					file/datastream is the same.
 				</p>
-				<img src="styles/images/lattice_diagram.png" alt="lattice diagram" />
+				<img src="images/lattice_diagram.png" alt="lattice diagram" />
 				<p>The above image shows the file structure of a PNG file without a PLTE chunk.</p>
 			</section>
 			<section class="parallax parallax-bg">
@@ -233,7 +233,7 @@
 					<li>fdAT: The Frame Data Chunk</li>
 				</ul>
 				<img
-					src="styles/images/APNG_chunks.png"
+					src="images/APNG_chunks.png"
 					alt="Diagram illustrating a possible way to assemble an animated PNG from three individual PNG files"
 				/>
 				<h3>Animation control chunk (acTL)</h3>
@@ -268,7 +268,7 @@
 						it
 					</li>
 				</ul>
-				<img src="styles/images/alpha_channel.png" alt="Using the Alpha Channel" />
+				<img src="images/alpha_channel.png" alt="Using the Alpha Channel" />
 				<p>
 					The image on the right shows how translucency can be applied to an object using the alpha
 					channel.
@@ -300,7 +300,7 @@
 					datastream, the default image may not be shown, the image won't load and it could crash
 					your software.
 				</p>
-				<img src="styles/images/incorrect_chunks.png" alt="incorrect chunks" />
+				<img src="images/incorrect_chunks.png" alt="incorrect chunks" />
 				<p>A green rectangle indicates the APNG has loaded correctly</p>
 			</section>
 
@@ -310,7 +310,7 @@
 
 			<section class="no-parallax">
 				<h3>GIF</h3>
-				<img src="styles/images/gif-apng-1.gif" alt="gif vs png chicken" />
+				<img src="images/gif-apng-1.gif" alt="gif vs png chicken" />
 				<p>
 					APNG's most popular competitor is GIF that was initially released back in 1987 and was not
 					designed as an animation medium but could store multiple images in one file. GIF also does
@@ -335,7 +335,7 @@
 					formats. It got its animation features a year after the initial release and is very widely
 					supported by modern browsers.
 				</p>
-				<img src="styles/images/supported_browsers.png" alt="browsers that support APNG file" />
+				<img src="images/webp.png" alt="support for webp file format" />
 				<h3>Other animation formats</h3>
 				<p>
 					Videos now can replace APNGs and GIFs in the way they are used on the web. The rapid
@@ -445,7 +445,7 @@
 					This will result in a very large file and not all GIF rendering programs can handle these
 					tiled files correctly.
 				</p>
-				<img src="styles/images/colours.png" alt="colours of an APNG file" />
+				<img src="images/colours.png" alt="colours of an APNG file" />
 				<h3>Support and Popularity</h3>
 				<p>
 					Despite its shortcomings of huge file sizes, limited colour, and slow encoding, GIFs
@@ -459,7 +459,7 @@
 					increase the gap to up to a 26%.
 				</p>
 				<img
-					src="styles/images/trends.png"
+					src="images/trends.png"
 					alt="Historical trends in the usage statistics of image file formats for websites, March 2022"
 				/>
 				<p>
@@ -469,7 +469,7 @@
 					animation.
 				</p>
 				<img
-					src="styles/images/statistics.png"
+					src="images/statistics.png"
 					alt="WebP vs. APNG usage statistics, March 2022 (w3techs.com)"
 				/>
 			</section>
@@ -494,7 +494,7 @@
 					range of websites and programs to less than 1% of websites.
 				</p>
 				<img
-					src="styles/images/usage.png"
+					src="images/usage.png"
 					alt="Percentages of websites using various image file formats"
 				/>
 				<p>
