--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -76,7 +76,7 @@
 				</p>
 				<p>
 					The only way for a software to correctly distinguish between PNG and APNG is by reading
-					the ancillary chunks which aren’t required to use PNGs, so if a software didn’t know about
+					the ancillary chunks which aren't required to use PNGs, so if a software didn't know about
 					APNGs, the first frame would show up as a typical PNG.
 				</p>
 				<p>
@@ -573,8 +573,8 @@
 					APNG came at a time when there were very limited alternatives and provided superior
 					quality and size to its competitors. It was well received by few boasting how much better
 					than GIF it was and pushed as a way to speed up a website. Sadly it failed gaining
-					popularity due to conflicted visions by the maintainers where some wanted it and others
-					did not want it to be included in the PNG specification.
+					popularity due to differing visions by the maintainers where some wanted its
+					implementation, and others pushed against it to be included in the PNG specification.
 				</p>
 				<p>
 					An APNG just adds 3 chunks on top of the PNG file structure which when missing/skipped
